# evm-staking-v3

./: .gitignore  README.md  TOLERANCE_UI.md  USAGE.md  cmds.md  deployment.json  dev_doc.txt  hardhat.config.js  package-lock.json  package.json  requirements.txt  run_auto_executor.sh  run_server.sh  setup.md  stake_when_cks.py  tolerance_offset.json
.claude/: settings.json
abi/: StakeWrap.abi.json
app/: __init__.py  auth.py  config.py  constants.py  globals.py  main.py  schemas.py
app/core/: config.py
app/routers/: executor.py  fast.py  settings.py  stake.py  stake_info.py  staking_gate.py  status.py  tolerance.py  tolerance_offset.py  ui.py
app/services/: __init__.py  evm_service.py  executor_service.py  fast_stake_service.py  settings_service.py  stake_info_service.py  stake_service.py  staking_gate_service.py
app/templates/: index.html
artifacts/contracts/StakeWrap.sol/: StakeWrap.json
auto_execute_rs/: Cargo.toml  README.md  build.rs  install_rust.sh
auto_execute_rs/src/: lib.rs  main.rs
bt_utils/: auto_execute.py  auto_execute_standalone.py  auto_execute_v2.py  config.py  constants.py  fast_stake_unstake.py  fast_stake_unstake_async.py  test.py  test_fee.py  utils.py
contracts/: ERROR_SELECTORS.md  IAlpah.sol  IAlpha.sol  IProxy.sol  IStaking.sol  ISubtensorBalanceTransfer.sol  ProxyImport.sol  StakeWrap.sol  StakeWrapConstants.sol
docs/: COMPILE_AND_DEPLOY.md
evm/: __init__.py  address.py  connection.py  contract.py  stake_wrap.py
scripts/: add_proxy_delegate.py  address_convert.py  compile_deploy_add_proxy.py  compile_deploy_add_proxy_custom.py  deploy-upgradeable.js  deploy.py  encode_transfer_all.py  export-stake-wrap-abi.js  interact.py  read_contract_config.py  set_executor.py  set_fee.py  test_pull_from_proxied_account.py  test_staking.py  upgrade.js  withdraw_all_to_proxy.py
tests/: encode_transfer_all.py  original_mev_source.sol  test_fee.py  test_proxy_staking.py  test_pull_from_normal.py  test_pull_from_proxied_account.py
utils/: logger.py  proxy_extrinsic.py  sim_swap.py  stake_list.py  stake_list_v2.py  subnet_history.py  tolerance.py
