[package]
name = "auto-execute-rs"
version = "0.1.0"
edition = "2021"
description = "Rust version of bt_utils/auto_execute.py: call StakeWrap execute() each Bittensor block"

[dependencies]
ethers = { version = "2", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
anyhow = "1"
