[package]
name = "auto-execute-rs"
version = "0.1.0"
edition = "2021"
description = "Rust version of bt_utils/auto_execute.py: call StakeWrap execute() each Bittensor block"

[dependencies]
ethers = { version = "2", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
hex = "0.4"
anyhow = "1"
# Bittensor chain: direct WS RPC (block + state_getStorage for balances)
sp-core = { version = "34", default-features = false, features = ["std"] }
blake2 = "0.10"
parity-scale-codec = { version = "3.7", features = ["derive"] }
